# wallhaven_rs

./: README.md  components.d.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: main.yml  release.yml  test.yml
public/: test.yml
src/: App.vue  main.ts  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: http.rs
src-tauri/src/config/: config.rs  interface.rs  mod.rs
src-tauri/src/download/: download.rs
src-tauri/src/tags/: interface.rs  mod.rs  tags.rs
src-tauri/src/top/: interface.rs  mod.rs  top.rs
src-tauri/src/utils/: error.rs
src/components/Config/: index.vue
src/components/Default/: index.vue
src/components/Home/: index.vue
src/components/Hot/: index.vue
src/components/Index/: index.vue
src/components/Random/: index.vue
src/components/Style/: theme.scss
src/components/Tags/: index.vue
src/components/Top/: index.vue
src/router/: index.ts
