[package]
name = "wallhaven_rs"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
tauri = { version = "1.6.6", features = ["api-all"] }
serde = { version = "1.0.202", features = ["derive"] }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
serde_json = "1.0.117"
reqwest = "0.12.4"
http-cache-reqwest = "0.14.0"
reqwest-middleware = "0.3.1"
log = "^0.4"
scraper = "0.18.1"
thiserror = "1.0.61"
toml = "0.8.13"
chrono = "0.4.38"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
