[package]
name = "wallhaven_rs"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0.202", features = ["derive"] }
tauri-plugin-log = { version = "2" }
serde_json = "1.0.117"
reqwest = "0.12.4"
http-cache-reqwest = "0.14.0"
reqwest-middleware = "0.3.1"
log = "^0.4"
scraper = "0.18.1"
thiserror = "1.0.61"
toml = "0.8.13"
tauri-plugin-http = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2.0.1"
tauri-plugin-notification = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-shell = "2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2"
